# zeitungsarchiv

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_stitch_inbox.py
app/: main.py
app/cli/: main.py
app/db/: database.py  schema.sql
app/llm/: provider.py
app/web/: main.py  templating.py
app/web/routes/: admin.py  articles.py  books.py  places.py  recipes.py  review.py  search.py
app/web/static/: style.css
app/web/templates/: article.html  base.html  books.html  books_results.html  edit.html  index.html  places.html  places_results.html  recipes.html  recipes_results.html  review.html  search_results.html  stats.html
app/worker/: books.py  geocoder.py  ingestion.py  metadata.py  ocr.py  places.py  preprocess.py  recipes.py  stitch.py  watcher.py
config/: settings.toml  vuescan.ini
db/: archive_dump_2026-03-21.sql
examples/: README.md  vuescan.ini
skills/metadata/: SKILL.md
skills/ocr/: SKILL.md
skills/vuescan/: SKILL.md
skills/webapp/: SKILL.md
tests/: conftest.py  test_multipage.py  test_preprocess.py  test_stitch_integration.py  test_stitch_pipeline.py
